<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_prompt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/edit_box_color"
        android:hint="@string/input_title"
        android:inputType="textUri"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/input_url_desc"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:background="@color/edit_box_color"
        android:gravity="start"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <FrameLayout
        android:id="@+id/select_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edit_box_color"
        android:foreground="?selectableItemBackground">

        <TextView
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/select_channel"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_keyboard_arrow_right_black_24px"
            android:tint="@color/text_color"
            android:layout_marginEnd="16dp"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <Button
        android:id="@+id/submit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/release"
        android:textColor="@color/text_color" />

</LinearLayout>