<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ooo.oxo.excited.widget.InsetsToolbar
        android:id="@+id/toolbar"
        style="@style/LightToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:navigationIcon="@drawable/ic_arrow_back_black_24px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/share"
        android:textColor="@color/more_vert_color"
        android:textSize="32sp" />


    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@null"
        android:hint="@string/input_hint"
        android:inputType="textUri"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>


    <Button
        android:id="@+id/submit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/next_step"
        android:textColor="@color/text_color" />

</LinearLayout>