<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ooo.oxo.excited.widget.InsetsToolbar
            android:id="@+id/toolbar"
            style="@style/LightToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:navigationIcon="@drawable/ic_arrow_back_black_24px"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"
                tools:ignore="ContentDescription"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <LinearLayout
            android:id="@+id/countries"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countries"
                android:textColor="@color/more_vert_color"/>

            <TextView
                android:id="@+id/country_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_weight="1"
                android:text="中国"
                android:textColor="@color/more_vert_color"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24px"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country_numbers"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="+86"
                android:textColor="@color/more_vert_color"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line_color"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textColorHint="@color/web_text_color"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingEnd="56dp"
                android:paddingStart="16dp"
                android:textColorHint="@color/web_text_color"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/get_verify_code"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/verify_code"
                android:textColor="@color/text_color"
                android:textSize="12sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/get_verify_code"
                android:background="@color/line_color"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <LinearLayout
            android:id="@+id/user_protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_protocol"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/login_submit"
            android:textColor="@color/text_color"/>

    </LinearLayout>

</ScrollView>
